@@ -1,8 +1,8 @@
 {
-  "timestamp" : "2022-09-30T16:41:20Z",
+  "timestamp" : "2022-10-01T02:51:59Z",
   "count_outdated" : 803,
   "uniques_outdated" : 421,
-  "count" : 832,
+  "count" : 833,
   "uniques" : 436,
   "clones" : [
     {
@@ -98,8 +98,8 @@
     },
     {
       "timestamp": "2022-09-30T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
+      "count": 2,
+      "count_minmax": [ 1, 2 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ]
     }
