@@ -1,3 +1,11 @@
+2022-10-01T02:51:59Z:
+* notice: GitHub Actions Run URL: https://github.com/andry81/andry81/actions/runs/3162906993
+* notice: last 14d: unq all: 2 30
+* notice: prev accum: outdated-unq outdated-all / unq all: 421 803 / 436 832
+* notice: next accum: outdated-unq outdated-all / unq all: 421 803 / 436 833
+* notice: prev exec diff / last date diff / accum: unq all: +0 +1 -0 -0 / +1 +2 -0 -0 / 1 2
+* notice: removed / changed dates: [] / [2022-09-30]
+
 2022-09-30T16:41:20Z:
 * notice: GitHub Actions Run URL: https://github.com/andry81/andry81/actions/runs/3160299648
 * notice: last 14d: unq all: 2 29
